backend/src/main/java/com/test/extensionblock/error/ExtensionCountMaxException.java
package com.test.extensionblock.error;

public class ExtensionCountMaxException extends RuntimeException {
    public ExtensionCountMaxException(long maxLength) {
        super("extension count max limit is " + maxLength);
    }
}
